troubleshooting a state update issue on mobile

--- a/src/pages/CheatSheets/Css/Flexbox/Gap/FlexboxGraphGap.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/Gap/FlexboxGraphGap.styles.css
@@ -8,3 +8,7 @@
   width: 6rem;
   height: 1.5rem;
 }
+
+.ghost {
+  display: none;
+}
